err.txt
Record.cpp: In member function ‘bool Record::loadFromFile(Player*, std::vector<Room>&)’:
Record.cpp:86:43: error: ‘exit’ was not declared in this scope
     cerr << "open roomFile fail\n", exit(0);
                                           ^
Record.cpp:93:45: error: ‘exit’ was not declared in this scope
     cerr << "open playerFile fail\n", exit(0);
                                             ^
Room.cpp: In constructor ‘Room::Room()’:
Room.cpp:4:54: warning: passing NULL to non-pointer argument 1 of ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const value_type&, const allocator_type&) [with _Tp = Object*; _Alloc = std::allocator<Object*>; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::value_type = Object*; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<Object*>]’ [-Wconversion-null]
 Room::Room() : isExit(false), index(-1), objects(NULL){
                                                      ^
Room.cpp: In member function ‘virtual void Room::listMember(std::ofstream&)’:
Room.cpp:19:39: error: ‘append’ is not a member of ‘std::ios {aka std::basic_ios<char>}’
   ofstream map = open("map", ios::out|ios::append);
                                       ^
Room.cpp:19:50: error: ‘open’ was not declared in this scope
   ofstream map = open("map", ios::out|ios::append);
                                                  ^
Room.cpp:21:85: error: invalid operands of types ‘int’ and ‘const char [2]’ to binary ‘operator<<’
   map << (this->getUpRoom())->getIndex() == NULL ? -1 : this->upRoom->getIndex() << " ";
                                                                                     ^
Room.cpp:22:90: error: invalid operands of types ‘int’ and ‘const char [2]’ to binary ‘operator<<’
   map << (this->getDownRoom())->getIndex() == NULL ? -1 : this->downRoom->getIndex()  << " ";
                                                                                          ^
Room.cpp:23:89: error: invalid operands of types ‘int’ and ‘const char [2]’ to binary ‘operator<<’
   map << (this->getLeftRoom())->getIndex() == NULL ? -1 : this->leftRoom->getIndex() << " ";
                                                                                         ^
Room.cpp:24:91: error: invalid operands of types ‘int’ and ‘<unresolved overloaded function type>’ to binary ‘operator<<’
   map << (this->getRightRoom())->getIndex() == NULL ? -1 : this->rightRoom->getIndex() << endl;
                                                                                           ^
Room.cpp: In member function ‘virtual void Room::loadMember(std::ifstream&)’:
Room.cpp:55:7: error: ‘Monster’ was not declared in this scope
       Monster* obj = new Monster();
       ^
Room.cpp:55:16: error: ‘obj’ was not declared in this scope
       Monster* obj = new Monster();
                ^
Room.cpp:55:26: error: expected type-specifier before ‘Monster’
       Monster* obj = new Monster();
                          ^
Room.cpp:59:7: error: ‘Player’ was not declared in this scope
       Player* obj = new Player();
       ^
Room.cpp:59:15: error: ‘obj’ was not declared in this scope
       Player* obj = new Player();
               ^
Room.cpp:59:25: error: expected type-specifier before ‘Player’
       Player* obj = new Player();
                         ^
Room.cpp:63:7: error: ‘NPC’ was not declared in this scope
       NPC* obj = new NPC();
       ^
Room.cpp:63:12: error: ‘obj’ was not declared in this scope
       NPC* obj = new NPC();
            ^
Room.cpp:63:22: error: expected type-specifier before ‘NPC’
       NPC* obj = new NPC();
                      ^
Room.cpp:67:7: error: ‘Item’ was not declared in this scope
       Item* obj = new Item();
       ^
Room.cpp:67:13: error: ‘obj’ was not declared in this scope
       Item* obj = new Item();
             ^
Room.cpp:67:23: error: expected type-specifier before ‘Item’
       Item* obj = new Item();
                       ^
